3-Deploy_mesh_config/solution/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: radoscis
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:  
  - port:
       number: 80
       name: http
       protocol: HTTP
    hosts:
    - "http.test.com"
  - port:
       number: 31400
       name: tcp
       protocol: TCP
    hosts:
    - "tcp.test.com"
