3-Deploy_mesh_config/solution/httpbin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: radoscis
spec:
  hosts:
  - "http.test.com"
  exportTo:
  - "."
  - "istio-system"
  gateways:
  - ingress-gateway
  http:
  - route:
    - destination:
        host: httpbin-ilb-svc
        port:
          number: 80
